gcc/testsuite/gcc.target/aarch64/sve/acle/general-c/type_redef_13.c
/* { dg-do compile } */

#pragma GCC aarch64 "arm_sve.h"  /* { dg-message "note: previous declaration of 'svint8x2_t'" } */

int svint8x2_t;  /* { dg-error {'svint8x2_t' redeclared} } */
